-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
-- Boston, MA 02110-1301, USA.  
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.9
-------------

 * conversion of dataset to csv files using qucsconv
 * new components: AM and PM modulated and sources, relais, switch
 * transient analysis of ideal transmission line
 * delay times of controlled sources during transient analysis
 * frequency-independent loss factor for 'ideal' transmission line
 * damping factor for ac voltage/current sources during transient
   analysis
 * new functions in equation solver: xvalue(), yvalue() and min(), max()
   and avg() with range specification
 * implementation of temperature dependencies of resistor
 * output of characteristic values (e.g. ErEff or Zl) during S-parameter
   simulation
 * new components: coaxial cable, voltage probe

Version 0.0.8
-------------

 * conversion of vcd to dataset files using qucsconv
 * new component: ideal coupler
 * implementation of temperature models of diode, jfet, mosfet and bjt
 * analog models of digital components implemented
 * spice converter translates two and three mutual inductors
 * new stos() function in equation solver
 * allowing impedances other than 50ohms in rtoz(), ztor(), stoy(),
   ytos(), stoz(), ztos(), rtoy() and ytor()
 * new dft(), idft(), fft() and ifft() functions in equation solver
 * cubic spline interpolation in S-parameter file data possible
 * new components: correlated noise sources
 * implementation of mutual inductors

Version 0.0.7
-------------

 * started chapter about harmonic balance and its noise
 * documentation of mutual inductors
 * fixed bug in non-linear operational amplifier model
 * new unwrap(), rad2deg() and deg2rad() functions in equation solver

Version 0.0.6
-------------
