@@ -23,3 +23,4 @@ Maintainer:
 Authors: (see THANKS file for details)
 	Michael Margraf <Michael.Margraf@alumni.TU-Berlin.DE>
 	Stefan Jahn <stefan@lkcc.org>
+	Gunther Kraut <gn.kraut@t-online.de>
