@@ -34,3 +34,6 @@ Vincent Habchi, F5RCS <10.50@free.fr> for testing the simulator, giving
 Raimund Jacob  <raimi@lkcc.org> for wildly testing the application and
 	for applying patches to CVS during my time in Munich.  Also for
 	documenting the grammars used in Qucs's data files.
+
+Gunther Kraut <gn.kraut@t-online.de> for his contributions to the equation
+	solver evaluation.
