@@ -1,3 +1,7 @@
+2006-03-09  Stefan Jahn  <stefan@lkcc.org>
+
+	* evaluate.cpp: Loads of new functions in the equation solver.
+
 2006-03-05  Stefan Jahn  <stefan@lkcc.org>
 
 	* scan_dataset.l: Allow matrix entry spcecification, e.g.
